# wireless-communication

./: .gitignore  README.md
.github/: README.md
doc/: README.md
docs/: README.md
src/app/: .gitignore  README.md  WirelessCom.sln
src/app/WirelessCom.Application/: BleServiceDefinitions.cs  WirelessCom.Application.csproj
src/app/WirelessCom.Application/Caching/: GenericConcurrentDictionary.cs
src/app/WirelessCom.Application/Database/: IUnitOfWork.cs
src/app/WirelessCom.Application/Extensions/: BasicBleDeviceExtensions.cs  (+3 more)
src/app/WirelessCom.Infrastructure/: WirelessCom.Infrastructure.csproj
src/app/WirelessCom.Infrastructure.Persistence/: ClimateDbContext.cs  README.md  WirelessCom.Infrastructure.Persistence.csproj
src/app/WirelessCom.UI/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Routes.razor  WirelessCom.UI.csproj  _Imports.razor  package-lock.json  package.json  tailwind.config.js
src/nordic/BLE_Nordic/: CMakeList.txt  main.cpp
src/pi/: .gitignore  Cargo.toml  README.md  deploy.sh  output.txt
src/pi/.devcontainer/: devcontainer.json
src/pi/src/: ble_date_time.rs  ble_encode.rs  main.rs  sensor_data.rs  temperature_characteristic.rs
src/pi/src/gatt/: mod.rs
src/pi/src/gatt/characteristic/: characteristic_creater.rs  characteristic_handler.rs  description_characteristic_handler.rs  event_handler.rs  mod.rs
src/pi/src/gatt/current_time_service/: current_time_characteristic.rs  mod.rs
src/pi/src/gatt/environmental_service/: humidity_characteristic.rs  mod.rs  temperature_characteristic.rs
src/pi/src/gatt/temperature/: mod.rs  temperature_characteristic.rs
src/platformio/: README.MD  platformio.ini
(+91 files in other folders)
