[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
btleplug = "0.11.3"
# NOTE: only needed to cross compile to armv7 system
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
uuid = "1.6.1"
