[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bluster = "0.2.0"
futures = "0.3.29"
lazy_static = "1.4.0"
# NOTE: only needed to cross compile 
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
tokio = { version = "1.34.0", features= ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "0.8.1"
