[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bluster = "0.2.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["std", "fmt", "time"] }
uuid = "0.8.1"
# NOTE: only needed to cross compile 
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
async-trait = "0.1.74"
dht22_pi = "1.0.0"
lazy_static = "1.4.0"
time = { version = "0.3.30", features = [ "macros", "parsing", "local-offset" ] }
time-sys = "0.0.2"
linux-api = "0.0.5"
chrono = "0.4.31"

[dev-dependencies]
rstest = "0.18.2"
